--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -1,1 +1,1 @@
-<meta charset="UTF-8"><meta http-equiv="refresh" content="0; URL='/tutorials/example/first-step.html/'">
+<meta charset="UTF-8"><meta http-equiv="refresh" content="0; URL='/tutorials/example/first-step.html'">
